# cuttie

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  GO_TO_MARKET.md  KEYFRAME_NOTES.md  NOTES.md  README.md  SETUP_WINDOWS.md  SUIVI.md  docker-compose.gpu.yml  docker-compose.prod.yml  docker-compose.yml  package.json
.github/workflows/: ci.yml
api/: .dockerignore  .env.example  Dockerfile  adonisrc.ts  package-lock.json  package.json  tsconfig.json
api/.adonisjs/client/: manifest.d.ts
api/.adonisjs/server/: controllers.ts  routes.d.ts
api/app/controllers/: access_token_controller.ts  ai_editor_controller.ts  assets_controller.ts  auth_me_controller.ts  clips_controller.ts  creators_controller.ts  (+8 more)
api/config/: ally.ts  bodyparser.ts  database.ts  session.ts  shield.ts  transmit.ts
api/database/: db.sqlite3  db.sqlite3-shm  schema.ts
api/public/: clips
api/remotion/: CuttieComposition.tsx  animations.ts  editorTypes.ts  index.tsx
api/scripts/: backfill_creators.py  backfill_game_info.py  backfill_streamer_thumbnails.py
api/start/: env.ts  job_status.ts  kernel.ts  routes.ts
backend/: .env.example  detect_facecam_cli.py  main.py  pyproject.toml  test_diarization.py  transcribe_clip.py  worker.py
backend/app/: main.py
backend/app/models/: schemas.py
backend/app/routers/: analyze.py
backend/app/services/: audio_analyzer.py  audio_classifier.py  audioset_labels.py  chat_analyzer.py  clipper.py  db.py  device.py  downloader.py  editor_renderer.py  facecam_detector.py  frame_extractor.py  import_pipeline.py  llm_analyzer.py  openai_client.py  pipeline.py  s3_storage.py  scorer.py  speaker_diarizer.py  subtitle_generator.py  triage.py  vertical_clipper.py  vision_analyzer.py
backend/tests/: test_health.py  test_schemas.py  test_scorer.py
docs/: etude-viabilite.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.svelte  App.tsx  app.css  main.tsx
scripts/: docker-up.mjs  install-wsl.sh  migrate_db.mjs  migrate_to_s3.py  start.sh  update.sh
(+132 files in other folders)
