[project]
name = "cuttie-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.2",
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "openai>=2.29.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.0",
    "python-multipart>=0.0.22",
    "scipy>=1.15.3",
    "soundfile>=0.13.1",
    "uvicorn[standard]>=0.42.0",
    "yt-dlp>=2026.3.17",
]
