[project]
name = "cuttie-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.2",
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "openai>=2.29.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.0",
    "python-multipart>=0.0.22",
    "scipy>=1.15.3",
    "soundfile>=0.13.1",
    "uvicorn[standard]>=0.42.0",
    "yt-dlp>=2026.3.17",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "panns-inference>=0.1.1",
    "redis>=7.4.0",
    "boto3>=1.36.0",
    "modal>=1.4.0",
    "opencv-python-headless>=4.13.0.92",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "watchdog>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
